--- a/rapport.tex
+++ b/rapport.tex
@@ -254,21 +254,24 @@ Let's take a look at an example\footnote{Full example can be viewed at \url{http
 </rdf:RDF>
 \end{lstlisting}
 The lines \textbf{xmlns:rdf} and \textbf{xmlns:cd} define from which namespace elements with the rdf and cd prefix are from. The \textbf{rdf:Description} element contains the description of the resource identified by the \textbf{rdf:about} attribute. Finally the elements \textbf{cd:artist, cd:country, cd:company} etc. are properties of the resource.
+
+\subsection{Other areas of use}
+\subsubsection{Linked Data}
   
 \chapter{Method}
 
-The work with this thesis can be divided into two parts, the first being reading litterature regarding the Semantic Web and related subjects. The "litterature" included reading many articels, blog post and watching podcasts,\footnote{TODO, link to podcasts etc.} that were great to get a better understaning of the concept and importance of a more semantic web.\\\\  
+The work with this thesis can be divided into two parts, the first being reading litterature regarding the Semantic Web and related subjects. The "litterature" included reading many articels, blog post and watching podcasts,\footnote{TODO, links to references, podcasts etc.} that were great to get a better understaning of the concept and importance of a more semantic web.\\\\  
 The second part was to create a prototyp. Before I started to work on that I looked at the existing system, and tried to get some understanding of what steps the process went through. At this point a I got a lot of guidence from Magnus at Notisum, the author of the existing code. He explained the necessary steps and why they are important for the end result. However I didn't spend to much time on the old code, since I needed to create something different (and take factors such as semantics into mind).\\ With no background or knowledge in law it can be quite hard to understand the structure of laws and references between them. That is something I picked up as work went along with the prototype, many times I had to stop and try to figure out what I tried to do and why. 
 
 \section{Methodology}
-I devloped the prototype in many iterations, a simplfied version of agile.\footnote{Agile ... TODO} The first step was to get the program to read downloaded documents and save them as a new file. After that was in place, I always had a running prototype that would go through all files in a specified folder and apply transformations to them before saving them with a new exstension. This way I could add new functionality and try it out right away. I tried to put general functions and helpers seperate from SFS-specific logic so that it is possible to reuse a lot of the code when other legal sources needs to be implemented.     
+I devloped the prototype in several iterations, a simplfied version of agile.\footnote{Agile ... TODO} The first step was to get the program to read downloaded documents and save them as a new file. After that was in place, I always had a running prototype that would go through all files in a specified folder and apply transformations to them before saving them with a new exstension. This way I could add new functionality and try it out right away. I tried to put general functions and helpers seperate from SFS-specific logic so that it is possible to reuse a lot of the code when other legal sources needs to be implemented.     
 
 \section{Existing system}
 
 Below follows a short description of the steps the process goes through today. The steps in blue bubbles (first and last) are written in C\# and could with minor modifications be used together with the prototype. The two steps in pink bubbles (second step which is split in two different parts and the third step) are programs written in Pascal and will be replaced by the prototype. Then there's a green bubble (fourth step) which also with some modifications, could be reused with the output from the prototype.   
 \begin{center}
 \includegraphics[scale=0.6]{imgs/oldSystemChart.png}
-\captionof{figure}{Chart describing existing parse process}
+\captionof{figure}{Chart describing the existing process}
 \end{center}
 For the sake of simplicity lets say we are only handling SFS laws\footnote{In reality the program handles all kind of legal source documents.}. First we have a module that handles the actual downloading of the legal source files, (full text and register files\footnote{TODO, explain Registerfile} for each law) this part is written in C\# and could be reused\footnote{This part just have to download the files, then the prototype can do it's magic on those files.} for the prototype. Next we have two programs that for each law converts the downloaded files to very simple XML files, one for the full text and one for the registerfile. The next step is also an XML transformation, it takes the simple XML files and turns them into more comprehensive XML files. Now it's time to create files that can be viewed in a browser, this is done in several steps where data structures containing information regarding the laws are created with information like paragraph references and links. In the end a SHTML\footnote{TODO, explain SHTML} file that is ready to be published with this information is created. The final step is to export these files (and other legal source documents) to databases and update the website to display the newly created or updated files. 
 
@@ -280,53 +283,51 @@ The main differences between the old system and the prototype are:
 \item RDF, TODO: Marked up with URI's to.. 
 \end{itemize} 
 
-\subsection{Limitations}
+\subsection{Delimitations}
 The prototype does not have to handle the downloading of the legal source documents, these can be presumed exist on the computer running the prototype. \\The aim for the prototype is to deliver XML files, the final step where these files are transformed into HTML files is simple and needs to be controlled by Notisum. However this step is done by the prototype but might not be the way Notisum will do it, if they use the prototype.
 
 \part{Results}
 
-\chapter{Analysis}
-
-The result is a program that parse and transform downloaded laws. There’s no graphic user interface since that wasn’t the focus of the thesis. The programs main file is Controller.py and the process is started by running that as a python file in for example a terminal. 
-
-\begin{lstlisting}[language=bash, caption=Command to run the program]
-kungen@dell-desktop:~/Dropbox/Notisum/lawParse$ python Controller.py
-No parameters given
-Valid parameters are: DownloadAll, GenerateAll, ParseAll
-kungen@dell-desktop:~/Dropbox/Notisum/lawParse$ 
-\end{lstlisting}
-
-As the above figure shows the program expects a command parameter as input. The option to choose a command when there’s only one (ParseAll) available at the moment is implemented to facilitate the implementation of other future functions as well.\\\\
-TODO: Figure with classes/modules in boxes describing the flow. 
-
-\section{RDF}
-
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris
-purus.
-
-\section{Rättsinformationsprojektet standard}
-
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris
-purus.  
-
-\section{Performance}
-
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris
-purus. 
-
 \chapter{Implementation}
 
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris
-purus. 
+In this chapter I will discuss how the implementation was done and describe some implementation ideas and some parts of the prototype.\\\\
 
-\section{Central classes}
+\section{Interface}
+In order to interact with the program, read status and error information some sort of user interface is needed. Most common is a graphic user interface\footnote{A graphic user interface is a human-computer interface i.e., a way for humans to interact with computers.} that for example uses icons and menus. However, this falls outside the scope of this project, which focuses on the core of the program rather than the user experience. Instead, a rudimentary command line interface\footnote{Command line interface (CLI), an interface which use only text and are accessed solely by a keyboard. For example via an terminal in Linux.} was implemented, where the user can specify arguments at the start of the program (which is done via a terminal). During the parse and transformation process status updates will be presented in the terminal, for example if something fails the user will be notified. Also when the program is done the user will receive information about what was processed and the outcome.\\\\
+The main file is called Controller.py and to run the program from a terminal an argument specifying what the program should do is needed. The intresting arguments for this thesis are 'ParseAll' and 'GenerateAll' other possible arguments are 'DownloadAll' and possible candidates to implement would be only 'Parse' or 'Generate' followed by a specific source, for example 'Parse 1997:240'. Also one can specify what types of legal sources that should be run, (will be relevant when more sources than SFS are implemented.) default behavior is to run for all types. There's also two available flags to use, '-d' for debug mode and '-h' or '--help' for help instructions.    
 
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris
-purus. 
+\begin{lstlisting}[language=bash, caption=Command to run the program]
+kungen@dell-desktop:~$ python Controller.py --help
+Usage: pyhton Controller.py [-d | -h] [arg]
+Available flags are: -d (debug), -h--help (help)
+kungen@dell-desktop:~$ python Controller.py
+No arguments given
+Valid arguments are: DownloadAll, GenerateAll, ParseAll
+kungen@dell-desktop:~$ python Controller.py ParseAll
+\end{lstlisting}
 
-\section{General functionality}
+\section{Main modules}
 
-The help classes are used to simplify (mostly) for the Parser by defining native python types, functions with functionality adapted for this project's needs.  
+\subsection{Controller.py}
+The controller handles validation of user input (arguments and flags) if everything is correct it fetches all available legal source types (in this case just SFS) and then run the command given as an argument, ex. ‘ParseAll’ for each type.
+
+\subsection{Source.py}
+This module is a blueprint of how modules inheriting from it needs to look like. It contains the base classes for Controller and Parser, these classes contains functions that child classes need to implement and functions that can be overridden. Example of general functions are: checking if a file is up-to-date, trimming filenames or returning the XML or XHTML name for a certain file.\\
+However most of the code will be specific for each legal source type and be implemented in the child modules. To support a new type of legal source for example 'EG Rättsfall'\footnote{European.. TODO}, create an 'EG' module that inherits Source.Controller and Source.Parser.
+
+\subsection{SFS.py}
+This is the module for parsing SFS documents, it fetches a list of all the downloaded files\footnote{The path to the base directory is specified in a config file, then it appends a path like ‘/sfs/dl/sfsr/1997’ for example for all SFS full text documents from 1997} and pass their file names one by one to the parser function if these three requirements are met:
+\begin{enumerate}
+\item If we have the file parsed already and it is newer than the incoming raw file, don't parse it again.
+\item Filter out documents that is not proper SFS documents. They will have a name like ‘N1992:31’
+\item Skip parsing the documents that have been or will be revoked, they are marked as “The constitution is repealed / shall be repealed”\footnote{“Författningen är upphävd/skall upphävas”}
+\end{enumerate}
+
+TODO: More about the steps in SFS. 
+
+\section{Helper modules}
+
+The helper modules are used to simplify (mostly) for the Parser by defining native python types, text readers etc.  
 
 \subsection{DataObjects.py}
 
@@ -334,11 +335,6 @@ Makes it possible to build an object model for each legal source document, by
 creating simple data objects. These objects are base data types that inherit
 from native python types such as unicode, list, dict. The data types have
 added support for other properties that can be set when instantiated.
-
-\subsection{Dispatcher.py}
-
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris
-purus. 
 
 \subsection{Reference.py}
 
@@ -378,6 +374,25 @@ there's also an issue tracker with the current open issues, bugs and some
 enhancements.\\\\
 Project: \url{https://github.com/Sup3rgnu/lawParse}\\
 Checkout: \url{https://github.com/Sup3rgnu/lawParse.git}
+
+\chapter{Analysis}
+
+\section{RDF}
+
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris
+purus.
+
+\section{Rättsinformationsprojektet standard}
+
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris
+purus.  
+
+\section{Performance}
+
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris
+purus. 
+
+
 
 \chapter{Conclusions and Discussions}
 
